examples/bench/bad/typing/mask2.mlw

let p =
  let x = ref 0 in
  let x = ref 1 in
  x + x
